<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_person_white_24dp" />


    <EditText
        android:id="@+id/firsname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:background="@drawable/main"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawablePadding="12dp"
        android:hint="@string/first"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="#FFFF" />


    <EditText
        android:id="@+id/lastname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firsname"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:background="@drawable/main"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawablePadding="12dp"
        android:hint="@string/last"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="#FFFF" />


    <EditText
        android:id="@+id/date"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastname"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="left"
        android:inputType="date"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:background="@drawable/main"
        android:drawableLeft="@drawable/ic_date_range_black_24dp"
        android:drawablePadding="12dp"
        android:hint="@string/date"
        android:padding="10dp"
        android:textColorHint="#FFFF" />

    <Button
        android:id="@+id/Reg"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/date"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/butoon"
        android:text="@string/Reg"
        android:textColor="#FFFF"
        android:textSize="20dp"
        android:textStyle="bold|italic"


        />





</RelativeLayout>


